--- a/style.css
+++ b/style.css
@@ -151,10 +151,10 @@ body {
     border-top: 1px solid lightgray;
     position: relative;
     font-size: 22px;
-    height: 80px;
+    height: auto;
     justify-content: center;
     padding: 0;
-    margin-bottom: -30px;
+    margin-bottom: -2%;
 }
 
 .project-container .tooltip {
@@ -258,18 +258,24 @@ body {
     display: flex;
     background-color: white;
     height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .page3 .section-title {
+    border: 1px solid red;
     display: flex;
     position: relative;
     justify-content: center;
+    align-items: center;
     min-width: 100%;
     top: 100;
     height: 10vh;
+    font-size: 22px;
     opacity: 0;
     transition: 750ms;
     transform: translateX(-25vw);
+    margin-top: -2.5%;
 }
 
 .page3 .section-title.show {
