--- a/style.css
+++ b/style.css
@@ -303,6 +303,26 @@ body {
 #card1, #card2, #card3, #card4 {
     width: 100%;
     height: 100%;
+    perspective: 800px;
+}
+
+#card1 .face {
+    background-image: linear-gradient( 135deg, #5EFCE8 10%, #736EFE 100%);
+}
+
+#card2 .face {
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+}
+
+#card3 .face {
+    background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
+}
+
+#card4 .face {
+    background: linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%), 
+    radial-gradient(at top left, rgba(255,255,255,0.30) 0%, 
+    rgba(0,0,0,0.30) 100%);
+    background-blend-mode: screen;
 }
 
 .card-container .card {
@@ -310,7 +330,6 @@ body {
     height: 100%;
     position: relative;
     transition: transform 1000ms;
-    perspective: 800px;
     transform-style: preserve-3d;
     cursor: pointer;
 }
