--- a/style.css
+++ b/style.css
@@ -339,6 +339,7 @@ body {
 }
 
 .face, .content {
+    box-sizing: border-box;
     width: 100%;
     height: 100%;
     border-radius: 2rem;
@@ -354,6 +355,8 @@ body {
 }
 
 .content {
+    font-size: 17px;
+    font-weight: 500;
     background-color: #D3D3D3;
     transform: rotateY(180deg);
     display: flex;
@@ -361,7 +364,8 @@ body {
     justify-content: center;
     align-items: center;
     gap: 5rem;
-    padding: 1rem;
+    line-height: 1.5;
+    padding: 10%;
 }
 
 .footer-container {
