--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
 .project-container {
     position: sticky;
     top: 0;
-    background-color: #353A34;
+    background-color: #6488EA;
     margin-top: 50vh;
     margin-bottom: 50px;
     padding: 0;
@@ -393,42 +393,96 @@ body {
     padding: 10%;
 }
 
-.footer-container {
-    position: relative;
+.page4 {
+    background-color: #6488EA;
+    position: sticky;
+    top: 0;
     display: flex;
-    background-color: lightgray;
-    bottom: 0vh;  
-    min-height: 5vh;
-    width: 100%;
-    text-align: center;
-    justify-content: space-evenly;
+    height: 100vh;
+}
+
+.page4 .contact-container {
+    background-color: white;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
     align-items: center;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 12.5vw;
+    width: 30vw;
+    height: fit-content;
+    padding-bottom: 1%;
+    justify-content: space-evenly;
 }
 
-.email-container, .socials-container, .copyright-container {
-    display: inline-block;
-}
-
-.gif {
-    position: relative;
+.page4 .contact-container .contact-form {
     display: flex;
-    width: 160px;
-    justify-content: right;
+    flex-direction: column;
+    width: 90%;
 }
 
-.gif .speech {
-    position: absolute;
-    left: 0;
-    visibility: hidden;
+.page4 .contact-container .contact-title {
+    position: relative;
+    top: 0;
+    font-size: 30px;
+    margin-top: -2%;
 }
 
-.gif h5 {
-    position: absolute;
-    left: 15%;
-    bottom: 10%;
+.page4 .contact-container .contact-title hr {
+    margin-top: -10%;
+    width: 75%;
+    border: 3px solid #648EEA;
+    border-radius: 10px;
 }
 
-.gif:hover .speech{
-    visibility: visible;
+input[type=text], input[type=email] {
+    padding: 2%;
+    font-size: 18px;
+    margin-bottom: 3%;  
+    border: 2px solid darkgray; 
+    outline: none;
+    transition: 0.5s;
 }
 
+label[for=name], label[for=email], label[for=message] {
+    margin-bottom: 1%;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+textarea {
+    font-family: 'Inter', sans-serif;
+    padding: 2%;
+    font-size: 18px;
+    border: 2px solid lightgray; 
+    outline: none;
+    transition: 0.5s;
+    resize: none;
+}
+
+input[type=text]:focus, 
+input[type=email]:focus,
+textarea:focus {
+    border: 2px solid black; 
+}
+
+.page4 .button {
+    border: 2px solid lightgray; 
+    cursor: pointer;
+    margin-top: 3.5%;
+    align-self: center;
+    width: 25%;
+    padding: 2% 4%;
+    font-size: 16px;
+    background-color: white;
+    transition: 0.5s;
+}   
+
+.page4 .button:hover {
+    border: 2px solid black; 
+    background-color: #6488EA;
+    color: white;
+    box-shadow: 4px 4px 4px #6488EA;
+}
