--- a/style.css
+++ b/style.css
@@ -401,6 +401,13 @@ body {
     height: 100vh;
 }
 
+.page4 .section-title {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 22px;
+}
+
 .page4 .contact-container {
     background-color: white;
     border-radius: 25px;
@@ -412,6 +419,7 @@ body {
     transform: translateY(-50%);
     margin-left: 12.5vw;
     width: 30vw;
+    max-width: 100%;
     height: fit-content;
     padding-bottom: 1%;
     justify-content: space-evenly;
@@ -485,4 +493,50 @@ textarea:focus {
     background-color: #6488EA;
     color: white;
     box-shadow: 4px 4px 4px #6488EA;
+}
+
+.page4 .extra-container {
+    background-color: white;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 10vw;
+    max-width: 100%;
+    height: fit-content;
+    top: 50%;
+    margin-left: 20%;
+    border-radius: 25px;
+    padding-bottom: 1%;
+}
+
+.page4 .extra-container .link-container .link-title{
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.page4 .extra-container .link-container .image-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.page4 .extra-container .link-container .image-container img{
+    width: 60px;
+    max-width: 100%;
+    height: 60px;
+    max-height: 100%;
+}
+
+.page4 .ending-text {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.page4 .copyright {
+    position: absolute;
+    bottom: 0;
+    right: 1%;
 }
