--- a/style.css
+++ b/style.css
@@ -433,6 +433,8 @@ body {
     top: 10%;
     border: 1px solid red;
     width: 90%;
+    height: 80%;
+    max-height: 80%;
 }
 
 .page4 .contact-container .contact-title {
